samples/_failures_safe/1761086919_35b6da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62539fe6.c: In function ‘main’:
./samples/SAFE/__tmp_62539fe6.c:165:5: error: ‘execute’ undeclared (first use in this function)
  165 |     execute
      |     ^~~~~~~
./samples/SAFE/__tmp_62539fe6.c:165:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_62539fe6.c:165:12: error: expected ‘;’ at end of input
  165 |     execute
      |            ^
      |            ;
./samples/SAFE/__tmp_62539fe6.c:165:5: error: expected declaration or statement at end of input
  165 |     execute
      |     ^~~~~~~
